--- a/style.css
+++ b/style.css
@@ -1,5 +1,27 @@
-h1{font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
+
+body{background-color: rgba(0, 47, 92)}
+
+
+
+.max_navbar{background-color: rgba(220, 0, 106);
+        padding: 5px;   
+        margin-top: -15px;
+        width: 100%;
+        margin-left: -2px;
+        border-radius: 10px;
+        display: flex;
+        height: 100px;
+        justify-content: space-between;
+
+}
+.max_titel{ 
+       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 250%;
+     align-self: center;
     
-    }
+}
 
-
+.form_logo{
+    align-self: start; 
+    height: 100px; 
+}
