--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{background-color: rgba(0, 47, 92)}
 
 
 
-.max_navbar{background-color: rgba(220, 0, 106);
+.max_navbar{background-color: rgb(220, 0, 106);
         padding: 5px;   
         margin-top: -15px;
         width: 100%;
@@ -18,10 +18,29 @@ body{background-color: rgba(0, 47, 92)}
        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 250%;
      align-self: center;
+     margin-left: -80px;
+     
     
 }
 
-.form_logo{
+.form_logo{ 
     align-self: start; 
     height: 100px; 
 }
+.form_naam{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;    
+    font-size: larger;
+    font-family: Arial, Helvetica, sans-serif;
+    color:  rgb(255,255,255)
+}
+.input_text_form{ 
+    display:flex;
+    margin-left: 760px;
+    margin-top: 7px;
+
+}
+
+    
+    
