text box gemaakt

--- a/style.css
+++ b/style.css
@@ -42,5 +42,47 @@ body{background-color: rgba(0, 47, 92)}
 
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.form_feedback_textbox{
+    color: white;
+    margin-top: 500px;
+}
+.from_andere_feedback{
+    margin-left: 1000px;
+}
+
     
     
