--- a/style.css
+++ b/style.css
@@ -1,47 +1,80 @@
-
-body{background-color: rgba(0, 47, 92)}
-
-
-
-.max_navbar{background-color: rgb(220, 0, 106);
-        padding: 5px;   
-        margin-top: -15px;
-        width: 100%;
-        margin-left: -2px;
-        border-radius: 10px;
-        display: flex;
-        height: 100px;
-        justify-content: space-between;
-
-}
-.max_titel{ 
-       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 250%;
-     align-self: center;
-     margin-left: -80px;
-     
-    
+body {
+    background-color: rgb(0, 54, 92)
 }
 
-.form_logo{ 
-    align-self: start; 
-    height: 100px; 
-}
-.form_naam{
-    margin-top: 50px;
+
+
+.max_navbar {
+    background-color: rgb(220, 0, 106);
+    padding: 5px;
+    margin-top: -15px;
+    width: 100%;
+    margin-left: -2px;
+    border-radius: 10px;
     display: flex;
-    justify-content: center;    
-    font-size: larger;
-    font-family: Arial, Helvetica, sans-serif;
-    color:  rgb(255,255,255)
-}
-.input_text_form{ 
-    display:flex;
-    margin-left: 760px;
-    margin-top: 7px;
+    height: 100px;
+    justify-content: space-between;
 
 }
 
+.max_titel {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 250%;
+    align-self: center;
+    margin-left: -80px;
+    color: white;
+
+
+}
+
+.begin_form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border-radius: 5px;
+    border-color: black;
+}
+
+.form_naam {
+    color: white;
+}
+
+.naam_input {
+    margin-top: 10px;
+}
+
+.e-mail_input {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    color: white;
+}
+
+
+.tips_en_tops {
+    display: flex;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 200px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    color: white;
+}
+
+.form_text_tips_en_tops {
+    height: 100px;
+    width: 600px;
+    border-radius: 5px;
+    border-color: color white;
+}
+
+.form_text_tips_en_tops {
+    border: solid white;
+}
 
 
 
@@ -76,13 +109,13 @@ body{background-color: rgba(0, 47, 92)}
 
 
 
-.form_feedback_textbox{
+
+.form_feedback_textbox {
     color: white;
     margin-top: 500px;
-}
-.from_andere_feedback{
-    margin-left: 1000px;
+    margin-left: 590px;
 }
 
-    
-    
+.form_tips_en_tops {
+    margin-left: 230px
+}
