--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 250%;
     align-self: center;
-    margin-left: -80px;
+    margin-left:-80px;
     color: white;
 
 
@@ -32,22 +32,30 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 50px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     border-radius: 5px;
     border-color: black;
+    
 }
 
-.form_naam {
+.form_voor_naam {
     color: white;
+    margin-bottom: 10px;
 }
 
 .naam_input {
     margin-top: 10px;
 }
 
+.form_achter_naam{
+    color: white;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
 .e-mail_input {
-    margin-top: 20px;
+    margin-top: 30px;
     margin-bottom: 10px;
     color: white;
 }
@@ -57,7 +65,7 @@ body {
     display: flex;
     justify-content: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 200px;
+    margin-top: 20px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -76,13 +84,17 @@ body {
 .form_verzend{
     margin-top: 50px;
 }
+textarea:hover{
+    border: solid black;
+}
 
+input:hover{
+    border : solid black;
+}
 
-
-
-
-
-
+select:hover{
+    border: solid black;
+}
 
 
 
