--- a/style.css
+++ b/style.css
@@ -1,107 +1,19 @@
 body {
-    background-color: rgb(0, 54, 92)
+    background-color: rgb(0, 54, 92);
+    color: white;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 
 
-.max_navbar {
+.navbar {
     background-color: rgb(220, 0, 106);
     padding: 5px;
     margin-top: -15px;
     width: 100%;
-    margin-left: -2px;
     border-radius: 10px;
     display: flex;
     height: 100px;
     justify-content: space-between;
-
 }
 
-.max_titel {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 250%;
-    align-self: center;
-    margin-left:-80px;
-    color: white;
-
-
-}
-
-.begin_form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-radius: 5px;
-    border-color: black;
-    
-}
-
-.form_voor_naam {
-    color: white;
-    margin-bottom: 10px;
-}
-
-.naam_input {
-    margin-top: 10px;
-}
-
-.form_achter_naam{
-    color: white;
-    margin-top: 30px;
-    margin-bottom: 10px;
-}
-
-.e-mail_input {
-    margin-top: 30px;
-    margin-bottom: 10px;
-    color: white;
-}
-
-
-.tips_en_tops {
-    display: flex;
-    justify-content: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 20px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-    color: white;
-}
-
-.form_text_tips_en_tops {
-    border-radius: 5px;
-}
-
-.form_text_tips_en_tops {
-    border: solid white;
-}
-
-.form_verzend{
-    margin-top: 50px;
-}
-textarea:hover{
-    border: solid black;
-}
-
-input:hover{
-    border : solid black;
-}
-
-select:hover{
-    border: solid black;
-}
-
-.form_feedback_textbox {
-    color: white;
-    margin-top: 500px;
-    margin-left: 590px;
-}
-
-.form_tips_en_tops {
-    margin-left: 230px
-}
